--- a/index.html
+++ b/index.html
@@ -9,131 +9,120 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
-    <div class="page">
-      <header class="header">
-        <nav class="header__menu">
-          <ul class="header__links-list">
-            <li class="header__list-item-no-bullit">
-              <a class="header__link header__link-active" id="Главная"
-                >главная</a
-              >
-            </li>
-            <li>
-              <a class="header__link" href="#ПосмотретьЛоты"
-                >посмотреть лоты
-              </a>
-            </li>
-            <li>
-              <a class="header__link" href="ОбАукционе">об аукционе </a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header__logo">
-          <img
-            src="./images/logo-black.svg"
-            alt="Оно Тебе Надо"
-            class="header__logo-image"
-          />
-        </a>
-        <address class="address">
-          <a href="tel:+99995555555" class="address__links">+9 999 555 5555</a>
-          <br />
-          <a href="mailto:info@sobaka.ge" class="address__links"
-            >info@sobaka.ge</a
+  <body class="body__scale">
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link_no-bullit">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo" href="#0">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main class="main">
+      <section class="cover">
+        <h1 class="cover__title">
+          <span class="aligned-text">О<span class="span_o">н</span>о</span>
+          <span class="aligned-text_center"
+            >те<span class="span_e">б</span>е</span
           >
-          <p>наб. Принсенграхт 263-265, Амстердам</p>
-        </address>
-      </header>
-      <main>
-        <section class="cover">
-          <div class="overlay"></div>
-          <h1 class="cover__title">
-            <span class="aligned-text"
-              >о<span class="letter-spacing-extended">н</span></span
-            >о
-            <span class="aligned-text aligned-text_center"
-              >те<span class="letter-spacing-extended">б</span>е</span
-            >
-            <span class="aligned-text aligned-text_right"
-              ><span class="letter-spacing-extended">н</span>ад<span
-                class="no-letter-spacing"
-                >о</span
-              ></span
-            >
-          </h1>
-          <div class="cover__description">
-            <h2 class="cover__description-text">
-              Аукцион вещей, в которые никто не верил
-            </h2>
-            <button class="bet-button" type="button">Сделать ставку</button>
-          </div>
-        </section>
-        <section class="lots">
-          <h2 class="lots__heading">Лоты</h2>
-          <ul class="lots__card-list">
-            <li class="lots__card-list-item">
-              <a href="#0" class="card-link">
-                <article class="card card_type_film">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
-                    Фильм режиссёра, который бросил киношколу
-                  </h3>
-                  <p class="card__text">
-                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                    ставка, если бы вы не знали, что режиссёр — Пол Томас
-                    Андерсон?
-                  </p>
-                </article>
-              </a>
-            </li>
-            <li class="lots__card-list-item">
-              <a href="#0" class="card-link">
-                <article class="card card_type_book">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
-                    Книга, где описан один скучный день из жизни рекламного
-                    агента
-                  </h3>
-                  <p class="card__text">
-                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
-                    и с переходами на древнеанглийский. В ней одновременно
-                    рассказывается о 16 июня 1904 года и об истории литературы,
-                    начиная с античных времён. И это всё накладывается на
-                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                    Джеймса Джойса?
-                  </p>
-                </article>
-              </a>
-            </li>
-            <li class="lots__card-list-item">
-              <a href="#0" class="card-link">
-                <article class="card card_type_picture">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">
-                    Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h3>
-                  <p class="card__text">
-                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                    котиков… Сколько бы вы на такое поставили, если бы не знали,
-                    что это — одна из революционных работ Кандинского?
-                  </p>
-                </article>
-              </a>
-            </li>
-          </ul>
-          <a class="lots__look-more-link" href="#0">посмотреть больше</a>
-        </section>
-        <section class="about">
-          <div class="about__logo">
+          <span class="aligned-text_right"
+            >Н<span class="span_a">адо</span></span
+          >
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button type="button" class="bet-button">Сделать ставку</button>
+        </div>
+        <div class="overlay"></div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="card lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card_type_1">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="card lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card_type_2">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="card lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card_type_3">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">Посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__column">
+          <a class="about__logo" href="#0">
             <img
               class="about__logo-image"
-              alt="Оно Тебе Надо"
               src="./images/logo-white.svg"
+              alt="Логотип about"
             />
-          </div>
-          <h3 class="about__title">Об аукционе</h3>
+          </a>
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -152,60 +141,57 @@
               лоты стали культовыми.
             </p>
           </div>
-        </section>
-      </main>
-      <footer class="footer">
-        <address class="address">
-          <a href="tel:+99995555555" class="address__links">+9 999 555 5555</a>
-          <br />
-          <a href="mailto:info@sobaka.ge" class="address__links"
-            >info@sobaka.ge</a
-          >
-          <p>наб. Принсенграхт 263-265, Амстердам</p>
-        </address>
-        <nav>
-          <ul class="footer__menu-list">
-            <li class="footer__menu-list-item">
-              <a class="footer__link-active">главная</a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a href="#ПосмотретьЛоты">посмотреть лоты</a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a href="#ОбАукционе">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a href="https://www.youtube.com/" class="footer__social-link">
-              <img
-                src="./images/yt.svg"
-                alt="Ссылка на Ютуб"
-                class="footer__social-icon"
-              />
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="https://vk.com/" class="footer__social-link">
-              <img
-                src="./images/vk.svg"
-                alt="Ссылка на В Контакте"
-                class="footer__social-icon"
-              />
-            </a>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address__text">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a class="footer__menu-link">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="https://www.pinterest.com/" class="footer__social-link">
-              <img
-                src="./images/pinterest.svg"
-                alt="Ссылка на Пинтерест"
-                class="footer__social-icon"
-              />
-            </a>
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
-      </footer>
-    </div>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Логотип youtube"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Логотип ВКонтакте"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Логотип Pinterest"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
